--- a/app/src/main/res/layout/fragment_passenger_home.xml
+++ b/app/src/main/res/layout/fragment_passenger_home.xml
@@ -49,7 +49,11 @@
                 android:background="@drawable/bg_edittext_rounded"
                 android:padding="12dp"
                 android:textColor="@color/text_color"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:clickable="true"/>
 
             <TextView
                 android:id="@+id/tv_recent_title"
