--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="text_color">#1F1300</color>
     <!-- Background Colors -->
     <color name="background_color">#FFFCF9</color>
-    <color name="component_background">#E0E0E0</color>
+    <color name="component_background">#F5F5F5 </color>
     <color name="message_background">#0056B3</color>
 
 </resources>
